req: change '=' to '>=' and add ca-certificates

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,26 @@
-certifi=2021.10.8
-click=8.0.3
-dataclasses=0.8
-flask=2.0.2
-flask-sqlalchemy=2.5.1
-greenlet=1.1.1
-itsdangerous=2.0.1
-jinja2=3.0.2
-libcxx=12.0.0
-libffi=3.3
-markupsafe=2.0.1
-ncurses=6.3
-openssl=1.1.1l
-pip=21.2.4
-python=3.9.7
-readline=8.1
-setuptools=58.0.4
-sqlalchemy=1.4.22
-sqlite=3.36.0
-tk=8.6.11
-tzdata=2021e
-werkzeug=2.0.2
-wheel=0.37.0
-xz=5.2.5
-zlib=1.2.11
+ca-certificates>=2021.10.26
+certifi>=2021.10.8
+click>=8.0.3
+dataclasses>=0.8
+flask>=2.0.2
+flask-sqlalchemy>=2.5.1
+greenlet>=1.1.1
+itsdangerous>=2.0.1
+jinja2>=3.0.2
+libcxx>=12.0.0
+libffi>=3.3
+markupsafe>=2.0.1
+ncurses>=6.3
+openssl>=1.1.1l
+pip>=21.2.4
+python>=3.9.7
+readline>=8.1
+setuptools>=58.0.4
+sqlalchemy>=1.4.22
+sqlite>=3.36.0
+tk>=8.6.11
+tzdata>=2021e
+werkzeug>=2.0.2
+wheel>=0.37.0
+xz>=5.2.5
+zlib>=1.2.11
