--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,24 +5,28 @@
   "proxy": "http://localhost:5050",
   "dependencies": {
     "@emotion/react": "^11.10.5",
-    "@mantine/core": "^5.9.5",
-    "@mantine/dates": "^5.9.5",
-    "@mantine/ds": "^5.9.5",
-    "@mantine/form": "^5.9.5",
-    "@mantine/hooks": "^5.9.5",
-    "@mantine/modals": "^5.9.5",
-    "@mantine/nprogress": "^5.9.5",
-    "@mantine/spotlight": "^5.9.5",
-    "@tabler/icons": "^1.118.0",
+    "@mantine/core": "^5.10.2",
+    "@mantine/dates": "^5.10.2",
+    "@mantine/dropzone": "^5.10.2",
+    "@mantine/form": "^5.10.2",
+    "@mantine/hooks": "^5.10.2",
+    "@mantine/modals": "^5.10.2",
+    "@mantine/notifications": "^5.10.2",
+    "@mantine/nprogress": "^5.10.2",
+    "@mantine/spotlight": "^5.10.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/luxon": "^3.2.0",
     "dayjs": "^1.11.7",
     "luxon": "^3.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.4",
+    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -48,9 +52,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/luxon": "^3.2.0",
-    "react-router-dom": "^6.6.1"
   }
 }
