--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,4 +1,4 @@
-version: '3.4'
+version: '3.9'
 
 services:
   db:
@@ -7,15 +7,22 @@ services:
     env_file:
       .env
     volumes:
-      - ./db:/var/lib/mysql
-    expose:
-      - 3306
+      - ./db_data:/var/lib/mysql
+    ports:
+      - 3306:3306
+    healthcheck:
+      # mysqladmin ping -h localhost -u root -p$MARIADB_ROOT_PASSWORD
+      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost", "-u", "root", "-p$MARIADB_ROOT_PASSWORD"]
+      timeout: 5s
+      retries: 10
 
   backend:
-    image: backend
+    env_file:
+      .env
     build:
       context: .
     ports:
       - 5050:5050
     depends_on:
-      - db
+      db:
+        condition: service_healthy
