--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,30 +7,38 @@ services:
     env_file:
       .env
     volumes:
-      - ${MARIADB_VOLUME_PATH}:/var/lib/mysql
-    expose:
-      - 3306
+      - ./db_data:/var/lib/mysql
+    ports:
+      - 3306:3306
+    healthcheck:
+      # mysqladmin ping -h localhost -u root -p$MARIADB_ROOT_PASSWORD
+      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost", "-u", "root", "-p$MARIADB_ROOT_PASSWORD"]
+      timeout: 5s
+      retries: 10
 
   backend:
-    image: backend
+    env_file:
+      .env
     build:
       context: .
     ports:
       - 5050:5050
-    expose:
-      - 5050
     depends_on:
-      - db
+      db:
+        condition: service_healthy
         
 
   frontend:
+    env_file:
+      .env
     image: frontend
     build:
       context: ./frontend
-      dockerfile: Dockerfile-dev
+      dockerfile: Dockerfile
     ports:
-      - 3000:80
-    environment: 
-      - FLASK_SERVER_ADDR=backend:5050
+      - 80:80
+      - 443:443
+    depends_on:
+      - backend
   
     
