--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -21,7 +21,7 @@ RUN rm -rf ./*
 
 # Copy static assets from builder stage
 COPY --from=build /build/build/ .
-# COPY ./nginx/nginx.conf /etc/nginx/nginx.conf
-# COPY ./nginx/default.conf /etc/nginx/sites-available/default
+COPY ./nginx/nginx.conf /etc/nginx/nginx.conf
+COPY ./nginx/default.conf /etc/nginx/sites-available/default
 # Containers run nginx with global directives and daemon off
 ENTRYPOINT ["nginx", "-g", "daemon off;"]
