--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.4'
 
 services:
   db:
+    platform: linux/amd64
     image: mariadb:latest
     restart: always
     env_file:
@@ -17,6 +18,7 @@ services:
       retries: 10
 
   backend:
+    platform: linux/amd64
     image: finnharbeke/finnance:backend
     env_file:
       .env
@@ -30,6 +32,7 @@ services:
         
 
   frontend:
+    platform: linux/amd64
     image: finnharbeke/finnance:frontend
     env_file:
       .env
