some ts warnings

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://backend:5050",
+  "proxy": "http://localhost:5050",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@mantine/core": "^5.10.2",
