--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,9 +22,19 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
-        name: Build image
-        run: docker compose -f docker-compose.yml build
+        name: Build and push backend
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          platforms: linux/arm64
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/finnance-backend:latest
       -
-        name: Push image to Docker Hub
-        run: docker compose -f docker-compose.yml push
+        name: Build and push backend
+        uses: docker/build-push-action@v3
+        with:
+          context: ./frontend
+          platforms: linux/arm64
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/finnance-frontend:latest
       
