docker-compose image links

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       retries: 10
 
   backend:
-    image: finnharbeke/finnance:backend
+    image: finnharbeke/finnance-backend:latest
     env_file:
       .env
     build:
@@ -29,7 +29,7 @@ services:
         
 
   frontend:
-    image: finnharbeke/finnance:frontend
+    image: finnharbeke/finnance-frontend:latest
     env_file:
       .env
     build:
