--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,27 +4,31 @@
   "private": true,
   "proxy": "http://localhost:5050",
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@mantine/core": "^5.10.2",
-    "@mantine/dates": "^5.10.2",
-    "@mantine/dropzone": "^5.10.2",
-    "@mantine/form": "^5.10.2",
-    "@mantine/hooks": "^5.10.2",
-    "@mantine/modals": "^5.10.2",
-    "@mantine/notifications": "^5.10.2",
-    "@mantine/nprogress": "^5.10.2",
-    "@mantine/spotlight": "^5.10.2",
+    "@emotion/react": "^11.10.6",
+    "@mantine/core": "^6.0.5",
+    "@mantine/dates": "^6.0.5",
+    "@mantine/dropzone": "^6.0.5",
+    "@mantine/form": "^6.0.5",
+    "@mantine/hooks": "^6.0.5",
+    "@mantine/modals": "^6.0.5",
+    "@mantine/notifications": "^6.0.5",
+    "@mantine/nprogress": "^6.0.5",
+    "@mantine/spotlight": "^6.0.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
     "@types/luxon": "^3.2.0",
+    "@types/node": "^16.18.23",
+    "@types/react": "^18.0.31",
+    "@types/react-dom": "^18.0.11",
     "dayjs": "^1.11.7",
-    "luxon": "^3.2.1",
+    "luxon": "^3.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.7.1",
+    "react-icons": "^4.8.0",
     "react-query": "^3.39.3",
-    "react-router-dom": "^6.8.0",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
