--- a/frontend/nginx/default.conf
+++ b/frontend/nginx/default.conf
@@ -1,11 +1,13 @@
 server {
     server_name stutz.finnharbeke.ch;
 
-    access_log  /var/log/nginx/finnance.access.log;
-    error_log /var/log/nginx/finnance.error.log;
-
     location / {
-        proxy_pass http://127.0.0.1:8000/;   
+        root /usr/share/nginx/html;
+        index  index.html;
+    }
+
+    location /api/ {
+        proxy_pass http://127.0.0.1:5050/;   
         proxy_redirect   off;
         proxy_set_header Host $http_host;   
         proxy_set_header X-Real-IP $remote_addr;
