--- a/frontend/nginx/default.conf
+++ b/frontend/nginx/default.conf
@@ -7,7 +7,7 @@ server {
     }
 
     location /api/ {
-        proxy_pass http://127.0.0.1:5050/;   
+        proxy_pass http://backend:5050/;   
         proxy_redirect   off;
         proxy_set_header Host $http_host;   
         proxy_set_header X-Real-IP $remote_addr;
