--- a/frontend/nginx/default.conf
+++ b/frontend/nginx/default.conf
@@ -18,11 +18,15 @@ server {
 
     listen [::]:443 ssl ipv6only=on; # managed by Certbot
     listen 443 ssl; # managed by Certbot
-    ssl_certificate /etc/letsencrypt/live/stutz.finnharbeke.ch/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/stutz.finnharbeke.ch/privkey.pem; # managed by Certbot
-    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 
+    ###
+    # SSL stuff
+    ###
+
+    ssl_certificate /etc/letsencrypt/live/stutz.finnharbeke.ch/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/stutz.finnharbeke.ch/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 }
 
 server {
