no nginx proxy, package-prod.json

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:latest as build
 WORKDIR /build
 
-COPY package.json package.json
+COPY package-prod.json package.json
 COPY package-lock.json package-lock.json
 COPY tsconfig.json tsconfig.json
 RUN npm ci
