--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@types/node": "^16.18.23",
     "@types/react": "^18.0.31",
     "@types/react-dom": "^18.0.11",
+    "axios": "^1.3.4",
     "dayjs": "^1.11.7",
     "luxon": "^3.3.0",
     "react": "^18.2.0",
