--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,7 +2,7 @@ server {
     server_name stutz.finnharbeke.ch;
 
     location / {
-        root /usr/share/nginx/html;
+        root /usr/www/finnance;
         try_files $uri $uri/ /index.html;
         index  index.html;
     }
