--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,41 +2,79 @@ version: '3.4'
 
 services:
   db:
-    image: mariadb:latest
+    image: mariadb:10.7
     restart: always
-    env_file:
-      .env
+    environment:
+      - MARIADB_ROOT_PASSWORD
+      - MARIADB_DATABASE
+      - PROD=1
     volumes:
       - ./db_data:/var/lib/mysql
-    ports:
-      - 3306:3306
+    healthcheck:
+      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost", "-u", "root", "-p$MARIADB_ROOT_PASSWORD"]
+      timeout: 5s
+      retries: 10
+  
+  staging-db:
+    image: mariadb:10.7
+    restart: always
+    environment:
+      - MARIADB_ROOT_PASSWORD
+      - MARIADB_DATABASE
+      - PROD=0
+    volumes:
+      - ./db_staging_data:/var/lib/mysql
     healthcheck:
       test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost", "-u", "root", "-p$MARIADB_ROOT_PASSWORD"]
       timeout: 5s
       retries: 10
 
   backend:
-    image: finnharbeke/finnance-backend:latest
-    env_file:
-      .env
+    image: finnance-backend
+    environment:
+      - MARIADB_ROOT_PASSWORD
+      - MARIADB_DATABASE
+      - CSRF_SESSION_KEY
+      - SECRET_COOKIE_KEY
     build:
       context: .
-    ports:
-      - 5050:5050
     depends_on:
       db:
         condition: service_healthy
-        
+  
+  staging-backend:
+    image: staging-backend
+    environment:
+      - MARIADB_ROOT_PASSWORD
+      - MARIADB_DATABASE
+      - CSRF_SESSION_KEY
+      - SECRET_COOKIE_KEY
+    build:
+      context: .
+    depends_on:
+      staging-db:
+        condition: service_healthy
+
+  finnance-build:
+    image: finnance-build
+    build:
+      context: ./frontend
+    volumes:
+      - ./finnance-build:/build/build
+
+  staging-build:
+    image: staging-build
+    build:
+      context: ./frontend
+    volumes:
+      - ./staging-build:/build/build
 
   frontend:
     image: finnharbeke/finnance-frontend:latest
-    env_file:
-      .env
     volumes:
       - /etc/letsencrypt:/etc/letsencrypt
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
+      - ./finnance-build:/usr/www/finnance
+      - ./staging-build:/usr/www/staging-finnance
     ports:
       - 80:80
       - 443:443
