--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:latest as build
+FROM node:20.0.0-alpine3.17 as build
 WORKDIR /build
 
 COPY package.json package.json
@@ -9,19 +9,3 @@ RUN npm ci
 COPY public/ public
 COPY src/ src
 RUN npm run build
-
-FROM nginx:bullseye
-
-# COPY --from=build /build/.nginx/nginx.conf /etc/nginx/conf.d/default.conf
-
-WORKDIR /usr/share/nginx/html
-
-# Remove default nginx static assets
-RUN rm -rf ./*
-
-# Copy static assets from builder stage
-COPY --from=build /build/build/ .
-COPY ./nginx/nginx.conf /etc/nginx/nginx.conf
-COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
-# Containers run nginx with global directives and daemon off
-ENTRYPOINT ["nginx", "-g", "daemon off;"]
