--- a/.github/workflows/build-staging.yml
+++ b/.github/workflows/build-staging.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   build-push:
     runs-on: self-hosted
+    environment: production
     steps:
       - name: Checkout
         uses: actions/checkout@v3
