--- a/.github/workflows/build-production.yml
+++ b/.github/workflows/build-production.yml
@@ -15,6 +15,10 @@ jobs:
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+      - name:
+        run: echo $username
+        with:
+          username: ${{ env.DOCKERHUB_USERNAME }}
       -
         name: Login to Docker Hub
         uses: docker/login-action@v2
@@ -29,7 +33,7 @@ jobs:
           push: true
           tags: ${{ env.DOCKERHUB_USERNAME }}/finnance:backend
       -
-        name: frontennd
+        name: frontend
         uses: docker/build-push-action@v3
         with:
           context: .
