--- a/.github/workflows/build-production.yml
+++ b/.github/workflows/build-production.yml
@@ -15,15 +15,11 @@ jobs:
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      - name:
-        run: echo $username
-        with:
-          username: ${{ env.DOCKERHUB_USERNAME }}
       -
         name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ env.DOCKERHUB_USERNAME }}
+          username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
         name: backend
@@ -31,11 +27,11 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ env.DOCKERHUB_USERNAME }}/finnance:backend
+          tags: ${{ vars.DOCKERHUB_USERNAME }}/finnance:backend
       -
         name: frontend
         uses: docker/build-push-action@v3
         with:
           context: .
           push: true
-          tags: ${{ env.DOCKERHUB_USERNAME }}/finnance:frontend
+          tags: ${{ vars.DOCKERHUB_USERNAME }}/finnance:frontend
