--- a/.github/workflows/build-staging.yml
+++ b/.github/workflows/build-staging.yml
@@ -19,7 +19,7 @@ jobs:
         name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ env.DOCKERHUB_USERNAME }}
+          username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
         name: backend
@@ -27,11 +27,11 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ env.DOCKERHUB_USERNAME }}/finnance:backend-staging
+          tags: ${{ vars.DOCKERHUB_USERNAME }}/finnance:backend-staging
       -
         name: frontend
         uses: docker/build-push-action@v3
         with:
           context: ./frontend
           push: true
-          tags: ${{ env.DOCKERHUB_USERNAME }}/finnance:frontend-staging
+          tags: ${{ vars.DOCKERHUB_USERNAME }}/finnance:frontend-staging
