--- a/nginx/staging.conf
+++ b/nginx/staging.conf
@@ -2,7 +2,7 @@ server {
     server_name sstutz.finnharbeke.ch;
 
     location / {
-        root /usr/www/staging-finnance;
+        root /usr/www/finnance-stagings;
         try_files $uri $uri/ /index.html;
         index  index.html;
     }
@@ -12,7 +12,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-NginX-Proxy true;
         # with backslash at end the /api part would get "cut" from the uri
-        proxy_pass http://staging-backend:5050;
+        proxy_pass http://backend-staging:5050;
         proxy_ssl_session_reuse off;
         proxy_set_header Host $http_host;
         proxy_cache_bypass $http_upgrade;
