all docker build push workflows

--- a/.github/workflows/production-frontend.yml
+++ b/.github/workflows/production-frontend.yml
@@ -1,12 +1,14 @@
-name: build & push production
+name: production frontend
 
 on:
   push:
     branches:
       - main
+    paths:
+      - 'frontend/**'
 
 jobs:
-  build-push:
+  production-frontend:
     runs-on: self-hosted
     environment: production
     steps:
@@ -22,16 +24,9 @@ jobs:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
-        name: backend
+        name: docker-build-push
         uses: docker/build-push-action@v3
         with:
-          context: .
-          push: true
-          tags: ${{ vars.DOCKERHUB_USERNAME }}/finnance:backend
-      -
-        name: frontend
-        uses: docker/build-push-action@v3
-        with:
-          context: .
+          context: ./frontend
           push: true
           tags: ${{ vars.DOCKERHUB_USERNAME }}/finnance:frontend
