workflow paths include themselves

--- a/.github/workflows/production-backend.yml
+++ b/.github/workflows/production-backend.yml
@@ -6,6 +6,7 @@ on:
       - main
     paths:
       - 'backend/**'
+      - '.github/workflows/production-backend.yml'
 
 jobs:
   production-frontend:
