--- a/.github/workflows/production-frontend.yml
+++ b/.github/workflows/production-frontend.yml
@@ -6,6 +6,7 @@ on:
       - main
     paths:
       - 'frontend/**'
+      - '.github/workflows/production-frontend.yml'
 
 jobs:
   production-frontend:
