--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ version: '3.4'
 services:
   db:
     image: mariadb:10.7
+    env_file:
+      - .env
     environment:
       - MARIADB_ROOT_PASSWORD
       - MARIADB_DATABASE
@@ -16,6 +18,8 @@ services:
   
   db-staging:
     image: mariadb:10.7
+    env_file:
+      - .env
     environment:
       - MARIADB_ROOT_PASSWORD
       - MARIADB_DATABASE
@@ -29,6 +33,8 @@ services:
 
   backend:
     image: finnharbeke/finnance:backend
+    env_file:
+      - .env
     environment:
       - MARIADB_ROOT_PASSWORD
       - MARIADB_DATABASE
@@ -42,6 +48,8 @@ services:
   
   backend-staging:
     image: finnharbeke/finnance:backend-staging
+    env_file:
+      - .env
     environment:
       - MARIADB_ROOT_PASSWORD
       - MARIADB_DATABASE
