--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,7 +83,9 @@ services:
       - 443:443
     depends_on:
       backend:
+        condition: service_started
       backend-staging:
+        condition: service_started
       build-production:
         condition: service_completed_successfully
       build-staging:
