--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -92,7 +92,7 @@ services:
         condition: service_completed_successfully
 
 volumes:
-  - production
-  - staging
+  production:
+  staging:
   
     
