--- a/nginx/staging.conf
+++ b/nginx/staging.conf
@@ -19,7 +19,7 @@ server {
         proxy_redirect off;
     }
 
-    listen [::]:443 ssl ipv6only=on; # managed by Certbot
+    # listen [::]:443 ssl ipv6only=on; # managed by Certbot
     listen 443 ssl; # managed by Certbot
 
     ###
@@ -39,7 +39,7 @@ server {
 
 
     listen 80;
-    listen [::]:80;
+    # listen [::]:80;
     server_name sstutz.finnharbeke.ch;
     return 404; # managed by Certbot
 
