apt-get instead of apt

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,8 +9,8 @@ ENV PYTHONUNBUFFERED=1
 
 # Install conda env requirements
 COPY environment.yml .
-RUN apt update && conda update --all
-RUN apt install gcc libmariadb3 libmariadb-dev -y
+RUN apt-get update && conda update --all
+RUN apt-get install gcc libmariadb3 libmariadb-dev -y
 RUN conda env create -p /env --file environment.yml && conda clean -afy
 # conda env create -n flask-new --file environment.yml && conda clean -afy
 
