--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -3,6 +3,7 @@ server {
 
     location / {
         root /usr/share/nginx/html;
+        try_files index.html;
         index  index.html;
     }
 
