Revert "removed actions environment"
This reverts commit 845d3463cb7a24d65b6416e24c6283b9b96b170f.

--- a/.github/workflows/production-frontend.yml
+++ b/.github/workflows/production-frontend.yml
@@ -11,6 +11,7 @@ on:
 jobs:
   production-frontend:
     runs-on: ubuntu-latest
+    environment: production
     steps:
       - name: Checkout
         uses: actions/checkout@v3
