--- a/.github/workflows/staging-frontend.yml
+++ b/.github/workflows/staging-frontend.yml
@@ -11,6 +11,7 @@ on:
 jobs:
   staging-frontend:
     runs-on: ubuntu-latest
+    environment: production
     steps:
       - name: Checkout
         uses: actions/checkout@v3
