--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,11 @@ on:
     ]
     types:
       - completed
+  push:
+    branches:
+      - main
+    paths:
+      - '.github/workflows/deploy.yml'
 
 jobs:
   deploy:
@@ -17,24 +22,15 @@ jobs:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     environment: production
     steps:
-      - name: Create SSH key
-        run: |
-          mkdir -p ~/.ssh/
-          echo "$SSH_PRIVATE_KEY" > ../private.key
-          sudo chmod 600 ../private.key
-          echo "$SSH_KNOWN_HOSTS" > ~/.ssh/known_hosts
-        shell: bash
-        env:
-          SSH_PRIVATE_KEY: ${{secrets.SSH_PRIVATE_KEY}}
-          SSH_KNOWN_HOSTS: ${{secrets.SSH_KNOWN_HOSTS}}
-          SSH_KEY_PATH: ${{ github.workspace }}/../private.key
-      - name: pull & deploy
-        run: |
-          ssh -i $SSH_KEY_PATH pi@doerfli.ddns.net
-          cd ~/finnance
-          wget https://raw.githubusercontent.com/finnharbeke/finnance/main/docker-compose.yml -O docker-compose.yml
-          docker compose pull
-          docker compose up -d --no-deps
-        shell: bash
-        env:
-          SSH_KEY_PATH: ${{ github.workspace }}/../private.key
+      - name: ssh to deploy
+        uses: garygrossgarten/github-action-ssh@release
+        with:
+          command: |
+            cd ~/finnance
+            wget https://raw.githubusercontent.com/finnharbeke/finnance/main/docker-compose.yml -O docker-compose.yml
+            docker compose pull
+            docker compose up -d --no-deps
+            docker system prune --force --all
+          host: ${{ secrets.HOST }}
+          username: pi
+          privateKey: ${{ secrets.SSH_PRIVATE_KEY}}
