--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,16 +10,11 @@ on:
     ]
     types:
       - completed
-  push:
-    branches:
-      - main
-    paths:
-      - '.github/workflows/deploy.yml'
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event.push }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     environment: production
     steps:
       - name: ssh to deploy
