bring back cache from

--- a/.github/workflows/production-backend.yml
+++ b/.github/workflows/production-backend.yml
@@ -32,4 +32,5 @@ jobs:
           push: true
           platforms: linux/arm64
           tags: ${{ vars.DOCKERHUB_USERNAME }}/finnance:backend
+          cache-from: type=registry,ref=${{ vars.DOCKERHUB_USERNAME }}/finnance:backend
           cache-to: type=inline
