--- a/.github/workflows/production-frontend.yml
+++ b/.github/workflows/production-frontend.yml
@@ -32,4 +32,5 @@ jobs:
           push: true
           platforms: linux/arm64
           tags: ${{ vars.DOCKERHUB_USERNAME }}/finnance:frontend
+          cache-from: type=registry,ref=${{ vars.DOCKERHUB_USERNAME }}/finnance:frontend
           cache-to: type=inline
