--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,11 @@
     "@mantine/notifications": "^6.0.5",
     "@mantine/nprogress": "^6.0.5",
     "@mantine/spotlight": "^6.0.5",
-    "@nivo/core": "^0.81.0",
-    "@nivo/sunburst": "^0.81.0",
+    "@nivo/bar": "^0.83.0",
+    "@nivo/core": "^0.83.0",
+    "@nivo/sankey": "^0.83.0",
+    "@nivo/stream": "^0.83.0",
+    "@nivo/sunburst": "^0.83.0",
     "@tanstack/react-query": "^4.28.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
