--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,7 +30,7 @@
     "@types/node": "^16.18.23",
     "@types/react": "^18.0.31",
     "@types/react-dom": "^18.0.11",
-    "axios": "^1.3.4",
+    "axios": ">=1.8.2",
     "dayjs": "^1.11.7",
     "luxon": "^3.3.0",
     "react": "^18.2.0",
